JSW Devsb/src/objects/Depot_Stock__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depot_Account_Code__c</fullName>
        <label>Depot Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Code__c</fullName>
        <label>Depot Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Name__c</fullName>
        <label>Depot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depot Stock</relationshipLabel>
        <relationshipName>Depot_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Stock__c</fullName>
        <label>Opening Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Type__c</fullName>
        <label>Packing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Short_Form__c</fullName>
        <label>Plant Short Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Depot Stock</relationshipLabel>
        <relationshipName>Depot_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Distrcit_Name__c</fullName>
        <label>Sales Distrcit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Loc__c</fullName>
        <label>Storage Loc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Depot Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Depot_Name__c</columns>
        <columns>Depot__c</columns>
        <columns>Material__c</columns>
        <columns>Opening_Stock__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>State__c</columns>
        <columns>Product__c</columns>
        <columns>Depot_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSI-{0000000000}</displayFormat>
        <label>Depot Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>